# Project-Lightspeed

./: .env  .gitignore  .gitmodules  README.md  config.json  docker-compose.yml  docker_README.md  nx.json  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  go.yml  ingest.yml  webrtc.yml
contrib/: ubuntu_installer.sh
contrib/ubuntu_installer/: README.md  ubuntu_installer.sh
contributing/: ISSUES.md  PULL-REQUESTS.md
frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend/docker/: config.json.template  entrypoint.sh
frontend/public/: config.json  index.html
frontend/src/: App.js  index.js
frontend/src/assets/: constants.js
frontend/src/components/: Header.jsx  LiveChat.jsx  VideoDetails.jsx  VideoPlayer.jsx
frontend/src/context/: RTCPeerContext.jsx  SocketContext.jsx
frontend/src/styles/: appStyles.js  globalStyles.js  headerStyles.js  liveChatStyles.js  videoDetailsStyles.js  videoPlayerStyles.js
ingest/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  project.json
ingest/src/: cli.yml  connection.rs  ftl_codec.rs  main.rs
lightspeed-ingest/: Cargo.toml
lightspeed-ingest/src/: connection.rs  main.rs
lightspeed-webrtc/: main.go
lightspeed-webrtc/internal/signal/: rand.go
react/: Dockerfile  LICENSE  package-lock.json
webrtc/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  hash  main.go  project.json
webrtc/ingest/: ingest.go
webrtc/internal/signal/: h264.go  (+3 more)
webrtc/ws/: client.go  hub.go  message.go
