[package]
name = "lightspeed-ingest"
version = "0.1.0"
authors = ["Garrett Graves <gravesg57@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
clap = {version = "2.33.3", features = ["yaml"]}
futures = "0.3.8"
futures-util = "0.3.8"
hex = "0.4.2"
log = "0.4.0"
rand = "0.8.1"
regex = "1"
ring = "0.16.19"
rtp-rs = "0.5.0"
simplelog = "^0.7.6"
tokio = { version = "1.0.1", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["codec"] }
